@@ -1,6 +1,8 @@
 Revision history for Perl extension Log::Dispatch::FileRotate.
 
 {{$NEXT}}
+    - fix test failure on file-open-failure.t related to current locale
+      setting.
 
 1.23 Thu Feb 09 2017
     - Issue a warning if the lockfile cannot be opened (Thanks KGOESS)
